# agent-tracer

./: .gitignore  README.md  pyproject.toml
agent_tracer/: __init__.py  decorators.py  recorder.py  step.py  tracer.py
examples/: simple_agent.py  test.py
